# skyrimse-test

./: .clang-format  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  clean.bat  clean.ps1  release.ps1  skyrim64_test.ini  skyrim64_test.sln
Dependencies/: libdeflate.vcxproj  libdeflate.vcxproj.filters  libimgui.vcxproj  libimgui.vcxproj.filters  libjemalloc.vcxproj  libjemalloc.vcxproj.filters  libmeshoptimizer.vcxproj  libmeshoptimizer.vcxproj.filters  libmoc.vcxproj  libmoc.vcxproj.filters  libtracy.vcxproj  libtracy.vcxproj.filters  libzydis.vcxproj  libzydis.vcxproj.filters
Resources/: logo_new.psd  toolbar.psd
Shaders/: BloodSplatter.fxp  BloodSplatter.hlsl  DistantTree.fxp  DistantTree.hlsl  RunGrass.hlsl  ShaderCommon.h  Sky.fxp  Water.fxp  Water.hlsl
shader_analyzer/: FXPPackageExtractor.cs  FormDiff.Designer.cs  FormDiff.cs  FormMain.Designer.cs  FormMain.cs  Program.cs  ShaderAnalyzer.cs  ShaderDecompiler.cs  ShaderMetadata.cs  ShaderVariableMetadata.cs  packages.config  shader_analyzer.csproj
skyrim32_ckt/: CreationKit.cpp  CreationKit.h  LipSynchAnim.cpp  LipSynchAnim.h  Loader.cpp  Loader.h  LoaderTLS.inl  MemoryModule.c  resource.h  skyrim32_ckt.cpp  skyrim32_ckt.rc  skyrim32_ckt.vcxproj  skyrim32_ckt.vcxproj.filters  stb.h  stdafx.cpp  stdafx.h
skyrim64_test/: achievements.cpp  d3d11.cpp  d3dconv.h  d3dx9_debug.cpp  d3dx9_release.cpp  dinput8.cpp  dinput8.h  dllmain.cpp  dump.cpp  dump.h  fallout4_ckt.vcxproj  fallout4_ckt.vcxproj.filters  resource.aps  (+13 more)
skyrim64_test/MaskedOcclusionCulling/Example/: CMakeLists.txt  Example.vcxproj
(+446 files in other folders)
